fix(multi-select): options overlap input (#1518)

--- a/projects/ng-aquila/src/dropdown/multi-select/multi-select.component.scss
+++ b/projects/ng-aquila/src/dropdown/multi-select/multi-select.component.scss
@@ -11,6 +11,8 @@
     box-shadow: v(dropdown-panel-shadow);
     border-radius: v(dropdown-panel-border-radius);
     background: v(ui-01);
+    display: flex;
+    flex-direction: column;
 
     .filter {
         --formfield-label-height: 6px;
